--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,17 @@
     <h1>Vanilla JavaScript App</h1>
     <h2>jegina is here</h2>
     <h1>welcome all</h1>
+    !DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Resume</title>   
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  </head>
+  <body>    
+  </body>
+</html>
   </main>
 </body>
 
